--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <title>Guess My Number!</title>
+    <script defer src="script.js"></script>
   </head>
   <body>
     <header>
@@ -27,6 +28,5 @@
         </p>
       </section>
     </main>
-    <script src="script.js"></script>
   </body>
 </html>
