--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <title>Guess My Number!</title>
-    <script defer src="script.js"></script>
+    <script type="module" defer src="script.js"></script>
   </head>
   <body>
     <header>
